# Feasibility3D_1.0

./: CMakeLists.txt  PRIVACY_POLICY.md  README.md
cMake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  LibraryVersions.h  Makefile  cmake_install.cmake  config.h  org.freecad.FreeCAD.metainfo.xml
cMake/Mod/Assembly/: Assembly_rc.py
cMake/Mod/OpenSCAD/: OpenSCAD_rc.py
cMake/Mod/Tux/: Tux_rc.py
cMake/cMake/FreeCAD_Helpers/: Makefile  cmake_install.cmake
cMake/data/: Makefile  cmake_install.cmake
cMake/data/examples/: Makefile  cmake_install.cmake
cMake/src/: Makefile  cmake_install.cmake
cMake/src/App/: CMakeScript.h  DocumentPy.cpp  DocumentPy.h  GeoFeaturePy.cpp  GeoFeaturePy.h  InitScript.h  Makefile  cmake_install.cmake  qrc_App_translation.cpp
cMake/src/App/FreeCADApp_autogen/: deps  moc_predefs.h
cMake/src/Base/: Makefile  cmake_install.cmake  qrc_Base_translation.cpp  swigpyrun.hh
cMake/src/Base/FreeCADBase_autogen/: deps  moc_predefs.h
cMake/src/Doc/: Makefile  cmake_install.cmake
cMake/src/Ext/: Makefile  cmake_install.cmake
cMake/src/Ext/freecad/: Makefile  cmake_install.cmake
cMake/src/Gui/: GuiInitScript.h  Makefile  cmake_install.cmake  moc_GraphvizView-internal.cpp  moc_GraphvizView.cpp  qrc_schemes.cpp
cMake/src/Gui/FreeCADGui_autogen/: deps  moc_predefs.h  mocs_compilation.cpp  ui_MouseButtons.h
cMake/src/Gui/Language/: FreeCAD_be.qm  FreeCAD_ca.qm  FreeCAD_cs.qm  FreeCAD_da.qm  FreeCAD_de.qm  FreeCAD_el.qm  FreeCAD_es-AR.qm  FreeCAD_es-ES.qm  FreeCAD_eu.qm  FreeCAD_fi.qm  FreeCAD_fr.qm  FreeCAD_hr.qm  FreeCAD_hu.qm  FreeCAD_it.qm  FreeCAD_ja.qm  FreeCAD_ka.qm  FreeCAD_ko.qm  FreeCAD_lt.qm  FreeCAD_nl.qm  FreeCAD_pl.qm  FreeCAD_pt-BR.qm  FreeCAD_pt-PT.qm  FreeCAD_ro.qm  FreeCAD_ru.qm  FreeCAD_sl.qm  FreeCAD_sr-CS.qm  FreeCAD_sr.qm  FreeCAD_sv-SE.qm  FreeCAD_tr.qm  FreeCAD_uk.qm  FreeCAD_val-ES.qm  FreeCAD_zh-CN.qm  FreeCAD_zh-TW.qm
cMake/src/Gui/PreferencePackTemplates/: Makefile  cmake_install.cmake
cMake/src/Gui/PreferencePacks/: Makefile  cmake_install.cmake
cMake/src/Gui/Quarter/: moc_ContextMenu.cpp  moc_ContextMenu.cpp_parameters  moc_InteractionMode.cpp  moc_InteractionMode.cpp_parameters  moc_QuarterWidget.cpp  moc_QuarterWidget.cpp_parameters  moc_SensorManager.cpp  moc_SensorManager.cpp_parameters  moc_SignalThread.cpp  moc_SignalThread.cpp_parameters
cMake/src/Gui/Stylesheets/: Makefile  cmake_install.cmake
cMake/src/MacAppBundle/: Makefile  cmake_install.cmake
cMake/src/Main/: Makefile  cmake_install.cmake  freecad.rc  freecadCmd.rc
cMake/src/Main/FreeCADGuiPy_autogen/: deps  moc_predefs.h
cMake/src/Main/FreeCADMainCmd_autogen/: deps  moc_predefs.h
cMake/src/Main/FreeCADMainPy_autogen/: deps  moc_predefs.h
cMake/src/Main/FreeCADMain_autogen/: deps  moc_predefs.h
cMake/src/Mod/: Makefile  cmake_install.cmake
cMake/src/Mod/AddonManager/: Makefile  cmake_install.cmake
cMake/src/Mod/Assembly/: Makefile  cmake_install.cmake
cMake/src/Mod/BIM/: Makefile  cmake_install.cmake
cMake/src/Mod/CAM/: Makefile  cmake_install.cmake
cMake/src/XDGData/: Makefile  cmake_install.cmake
cMake/tests/: Assembly_tests_run  Assembly_tests_run[1]_include.cmake  CTestTestfile.cmake  Makefile  Material_tests_run  Material_tests_run[1]_include.cmake  MeshPart_tests_run  MeshPart_tests_run[1]_include.cmake  Mesh_tests_run  Mesh_tests_run[1]_include.cmake  PartDesign_tests_run  PartDesign_tests_run[1]_include.cmake  Part_tests_run[1]_include.cmake  Points_tests_run  Points_tests_run[1]_include.cmake  Sketcher_tests_run  Sketcher_tests_run[1]_include.cmake  Tests_run[1]_include.cmake  cmake_install.cmake
cMake/tests/Assembly_tests_run_autogen/: deps
cMake/tests/Material_tests_run_autogen/: deps
cMake/tests/MeshPart_tests_run_autogen/: deps  moc_predefs.h
cMake/tests/Mesh_tests_run_autogen/: deps
cMake/tests/PartDesign_tests_run_autogen/: deps  moc_predefs.h
cMake/tests/Part_tests_run_autogen/: deps
cMake/tests/Points_tests_run_autogen/: deps
cMake/tests/Sketcher_tests_run_autogen/: deps
cMake/tests/Tests_run_autogen/: deps  moc_predefs.h
cMake/tests/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cMake/tests/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: CMakeLists.txt  InitGui.py
src/App/: Application.cpp  ApplicationPy.cpp  Document.cpp  FreeCADInit.py
src/Gui/: AutoSaver.cpp  CommandStd.cpp  FileDialog.cpp  MainWindow.cpp  Workbench.cpp  cfdOFWorkbench.h
src/Gui/Icons/: freecad.xpm
src/Gui/Language/: FreeCAD.ts  FreeCAD_af.ts  FreeCAD_ar.ts  FreeCAD_be.ts  FreeCAD_bg.ts  FreeCAD_ca.ts  FreeCAD_cs.ts  FreeCAD_da.ts  FreeCAD_de.ts  FreeCAD_el.ts  FreeCAD_es-AR.ts  FreeCAD_es-ES.ts  FreeCAD_eu.ts  FreeCAD_fi.ts  FreeCAD_fil.ts  FreeCAD_fr.ts  FreeCAD_gl.ts  FreeCAD_hr.ts  FreeCAD_hu.ts  FreeCAD_id.ts  FreeCAD_it.ts  FreeCAD_ja.ts  FreeCAD_ka.ts  FreeCAD_kab.ts  FreeCAD_ko.ts  FreeCAD_lt.ts  FreeCAD_nl.ts  FreeCAD_no.ts  FreeCAD_pl.ts  FreeCAD_pt-BR.ts  FreeCAD_pt-PT.ts  FreeCAD_ro.ts  FreeCAD_ru.ts  FreeCAD_sk.ts  FreeCAD_sl.ts  FreeCAD_sr-CS.ts  FreeCAD_sr.ts  FreeCAD_sv-SE.ts  FreeCAD_tr.ts  FreeCAD_uk.ts  (+4 more)
src/Gui/PreferencePacks/: CMakeLists.txt  package.xml
src/Gui/Stylesheets/: CMakeLists.txt
src/Main/: CMakeLists.txt  MainCmd.cpp  MainGui.cpp  MainPy.cpp
src/Mod/: __init__.py
src/Mod/AltKeyIconNameDisplay/: InitGui.py
src/Mod/AssetBrowser/: AssetBrowserWorkbench.py  AssetManager.py  CMakeLists.txt  Init.py  InitGui.py
src/Mod/AssetBrowser/Data/: assets.json
src/Mod/AssetBrowser/Gui/: AssetsBrowser.py  AssetsBrowser.ui  ModelLoader.py
src/Mod/Cloud/: package.xml
src/Mod/feasibility3d_cfd/: CMakeLists.txt  Velocityvector.py  __init__.py  initGui.py  test.py
src/Mod/feasibility3d_cfd/core/: animation.py  isosurface.py  streamlines.py  visualization.py  vtk_handler.py
src/Mod/feasibility3d_cfd/gui/: workbench.py
src/Mod/feasibility3d_cfd/gui/task_panels/: post_processor_panel.py  visualization_settings.py
src/Mod/feasibility3d_cfd/utils/: colormap_utils.py
src/XDGData/: org.freecad.FreeCAD.xml
(+1893 files in other folders)
